# elevator_simulation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: elevator_schedule.yaml
launch/: avdr_building_w_elevator.launch.py  gz_sim.launch.py  launch.py  launch_sim.launch.py  sim.launch.py  single_elevator_launch.py  spawn_elevators.launch.py  start_gazebo.launch.py
models/building/: model.config  model.sdf
models/elevator_car/: model.sdf
models/elevator_shaft/: model.sdf
plugins/: elevator_controller.cpp
scripts/: elevator_scheduler.py
worlds/: avdr_building_w_elevator.sdf
